update Windows_Setup.ps1 Creating Burp.bat file with command for execution